--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "api": "json-server --watch db.json -p 8001"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.2",
+    "@stitches/react": "^1.2.8",
     "@types/node": "18.15.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "json-server": "^0.17.2",
+    "keen-slider": "^6.8.5",
     "next": "13.2.4",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-hook-form": "^7.43.7",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0",
+    "yup": "^1.0.2"
   }
 }
